fix hero image on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -298,11 +298,11 @@
     }
 
     .hero .hero-content {
-        padding-top: 130%;
+        padding-top: 140%;
     }
 
     .hero .hero-content img {
-        width: 65%;
+        width: 75%;
     }
 
     .hero .btn {
